; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_sampling.c_anl_init_selection_state.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_sampling.c_anl_init_selection_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64* }

@oldrs = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @anl_init_selection_state(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @oldrs, i32 0, i32 0), align 8
  %4 = getelementptr inbounds i64, i64* %3, i64 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = call i32 (...) @random()
  %9 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @oldrs, i32 0, i32 0), align 8
  %10 = call i32 @sampler_random_init_state(i32 %8, i64* %9)
  br label %11

11:                                               ; preds = %7, %1
  %12 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @oldrs, i32 0, i32 0), align 8
  %13 = call i32 @sampler_random_fract(i64* %12)
  %14 = call i32 @log(i32 %13)
  %15 = sub nsw i32 0, %14
  %16 = load i32, i32* %2, align 4
  %17 = sdiv i32 %15, %16
  %18 = call double @exp(i32 %17)
  ret double %18
}

declare dso_local i32 @sampler_random_init_state(i32, i64*) #1

declare dso_local i32 @random(...) #1

declare dso_local double @exp(i32) #1

declare dso_local i32 @log(i32) #1

declare dso_local i32 @sampler_random_fract(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
